fix: index the collection groups the maintenance cron queries
The nightly /api/cron/maintenance run has failed every night since the
hardening pass. Its error code was logged as the generic `maintenance_failed`
because the sanitizer only accepts string codes and Firestore reports numeric
ones, which hid the cause.

runScheduledContactMaintenance lists queued work with
`.collectionGroup(...).where('status','==','queued')`. Firestore's automatic
single-field indexes are COLLECTION scope only, so a collection-group query
that filters needs an explicitly declared COLLECTION_GROUP index. The repo had
no index configuration at all, so the query raised FAILED_PRECONDITION on
every run and queued contact purges and merge recoveries were never processed.

Declares both request collections and wires the file into firebase.json.
Because a field override replaces the automatic indexes for that field, the
COLLECTION-scope entries the per-owner queries rely on are declared too.

Adds a config check that scans server code for collection-group queries and
fails when one has no COLLECTION_GROUP index, so this cannot silently recur.

Also documents the real cause of the local emulator failure: the emulator's
bundled Netty needs sun.misc.Unsafe, which Java 24+ restricts, so it exits
before writing a log. The existing note blamed a stale port.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>